# ai-copilot

./: .gitignore  LICENSE  README.md  pyproject.toml
ai_copilot/lib/: decision.py  function_call.py  voice_detect.py
ai_copilot/scripts/: main.py
notebooks/: Exploring ChatGPT Function Calling.ipynb
