[tool.poetry]
name = "ai-copilot"
version = "0.1.0"
description = ""
authors = ["Nazmus <nazmus.saadat1@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_copilot"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
tiktoken = "^0.4.0"
jupyterlab = "^4.0.2"
langchain = "^0.0.202"
chromadb = "^0.3.26"

[tool.poetry.scripts]
run = "ai_copilot.scripts.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
